--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "motion-time",
   "version": "0.1.0",
   "private": true,
+  "license": "MIT",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.2",
     "@testing-library/react": "^10.4.7",
